improvements and bugfixes
